left to make responsive

--- a/style.css
+++ b/style.css
@@ -28,10 +28,14 @@ nav {
   color: white;
   text-decoration: none;
 }
-img {
+svg {
   height: 30px;
   width: 30px;
   border-radius: 10%;
+ 
+}
+svg:hover {
+  cursor: pointer;
 }
 img:hover {
   cursor: pointer;
